--- a/bionic-js-tool/package.json
+++ b/bionic-js-tool/package.json
@@ -16,19 +16,16 @@
     "/watcher"
   ],
   "dependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/generator": "^7.3.0",
-    "@babel/parser": "^7.3.1",
-    "chokidar": "^2.0.4",
-    "flatmap": "0.0.3",
-    "ignore": "^5.0.5",
-    "mkdirp": "^0.5.1",
-    "npm": "^6.9.0",
-    "rimraf": "^2.6.3",
-    "string-format": "^2.0.0"
+    "@babel/core": "*",
+    "@babel/generator": "*",
+    "@babel/parser": "*",
+    "chokidar": "*",
+    "ignore": "*",
+    "mkdirp": "*",
+    "rimraf": "*"
   },
   "devDependencies": {
-    "jest-cli": "^24.8.0",
-    "pegjs": "^0.10.0"
+    "jest-cli": "*",
+    "pegjs": "*"
   }
 }
