- Working on integration test for BjsSync (form JS to XCode project)

--- a/bionic-js-tool/.gitignore
+++ b/bionic-js-tool/.gitignore
@@ -1,6 +1,6 @@
 # Custom
-bionic/testing-code/guest/package-lock.json
-bionic/testing-code/host
+testing-code/guest/package-lock.json
+testing-code/host
 
 # IntelliJ
 **/.idea/workspace.xml
