+ All tests green after checkout (.gitignore problem)

--- a/bionic-js-tool/.gitignore
+++ b/bionic-js-tool/.gitignore
@@ -1,12 +1,11 @@
 # Custom
-testing-code/guest/package-lock.json
 testing-code/host
 
 # IntelliJ
 **/.idea/workspace.xml
 
 # Node.js
-node_modules
+/node_modules
 
 # Coverages
 **/core/coverage
