--- a/bionic-js-tool/package.json
+++ b/bionic-js-tool/package.json
@@ -7,7 +7,7 @@
   "private": true,
   "scripts": {
     "test": "jest",
-    "compile-parser": "node node_modules/pegjs/bin/pegjs --allowed-start-rules \"CommentText, Tags, BionicTag, DescriptionTag\" -o parser/Parser.js parser/pegjsSrc/Parser.pegjs"
+    "compile-parser": "node node_modules/pegjs/bin/pegjs --allowed-start-rules \"CommentText, Tags, BionicTag, DescriptionTag\" -o parser/annotation/Parser.js parser/annotation/pegjsSrc/Parser.pegjs"
   },
   "files": [
     "/generation",
