--- a/bionic-js-tool/package.json
+++ b/bionic-js-tool/package.json
@@ -9,6 +9,10 @@
     "test": "jest",
     "compile-parser": "node node_modules/pegjs/bin/pegjs --allowed-start-rules \"CommentText, Tags, BionicTag, DescriptionTag\" -o parser/annotation/Parser.js parser/annotation/pegjsSrc/Parser.pegjs"
   },
+  "jest-comment": "the transform:{} config is to disable transpillation and avoid problems while debugging async code",
+  "jest": {
+    "transform": {}
+  },
   "files": [
     "/generation",
     "/parser",
