- Remove all useless code - Working sync

--- a/bionic-js-tool/package.json
+++ b/bionic-js-tool/package.json
@@ -17,7 +17,7 @@
     "/generation",
     "/parser",
     "/schema",
-    "/watcher"
+    "/filesystem"
   ],
   "dependencies": {
     "@babel/parser": "*",
