--- a/bionic-js-tool/package.json
+++ b/bionic-js-tool/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "test": "jest",
     "compile-parser": "node node_modules/pegjs/bin/pegjs --allowed-start-rules \"CommentText, Tags, BionicTag, DescriptionTag\" -o parser/annotation/Parser.js parser/annotation/pegjsSrc/Parser.pegjs",
-    "export-lunch-ios" : "node cli/bjsSyncCli.js ../lunch-ios/bjs.config.js"
+    "export-lunch-ios": "node cli/bjsSyncCli.js ../lunch-ios/bjs.config.js"
   },
   "jest-comment": "the transform:{} config is to disable transpillation and avoid problems while debugging async code",
   "jest": {
@@ -25,7 +25,8 @@
     "chokidar": "*",
     "ignore": "*",
     "mkdirp": "*",
-    "rimraf": "*"
+    "rimraf": "*",
+    "xcode": "*"
   },
   "devDependencies": {
     "jest-cli": "*",
