- Add a right temp dir async management, avoiding flacky tests

--- a/bionic-js-tool/package.json
+++ b/bionic-js-tool/package.json
@@ -26,7 +26,8 @@
     "ignore": "*",
     "mkdirp": "*",
     "rimraf": "*",
-    "xcode": "*"
+    "xcode": "*",
+    "uuid": "*"
   },
   "devDependencies": {
     "jest-cli": "*",
