+ Fix Xcode integration (a touch to xcodeproj file was missing)

--- a/bionic-js-tool/package.json
+++ b/bionic-js-tool/package.json
@@ -26,7 +26,8 @@
     "mkdirp": "*",
     "rimraf": "*",
     "xcode": "*",
-    "uuid": "*"
+    "uuid": "*",
+    "touch": "*"
   },
   "devDependencies": {
     "jest-cli": "*",
