- updates npm dependencies (mkdirp is now natively async) - adds ExportedFile to better differentiate between guest files, host files and package files

--- a/bionic-js-tool/package.json
+++ b/bionic-js-tool/package.json
@@ -25,13 +25,13 @@
     "ignore": "*",
     "mkdirp": "*",
     "rimraf": "*",
-    "xcode": "*",
+    "touch": "*",
     "uuid": "*",
-    "touch": "*"
+    "xcode": "*"
   },
   "devDependencies": {
+    "copy-dir": "*",
     "jest-cli": "*",
-    "pegjs": "*",
-    "copy-dir": "*"
+    "pegjs": "*"
   }
 }
