+ Adds packageMinimization to (configuration host target) to minimize JS code with Terser (https://github.com/terser/terser)

--- a/bionic-js-tool/package.json
+++ b/bionic-js-tool/package.json
@@ -25,6 +25,7 @@
     "ignore": "*",
     "mkdirp": "*",
     "rimraf": "*",
+    "terser": "*",
     "touch": "*",
     "uuid": "*",
     "xcode": "*"
