+ Removes unappropriate and buggy chockidar to walk files (the initial idea was to implement a watcher, but was aborted) + Adds glob to walk files + Adds processing time to stats

--- a/bionic-js-tool/package.json
+++ b/bionic-js-tool/package.json
@@ -21,7 +21,7 @@
   ],
   "dependencies": {
     "@babel/parser": "*",
-    "chokidar": "*",
+    "glob": "*",
     "ignore": "*",
     "mkdirp": "*",
     "rimraf": "*",
