+ replace glob with fast-glob (it's really faster and natively async)

--- a/bionic-js-tool/package.json
+++ b/bionic-js-tool/package.json
@@ -21,7 +21,7 @@
   ],
   "dependencies": {
     "@babel/parser": "*",
-    "glob": "*",
+    "fast-glob": "*",
     "ignore": "*",
     "mkdirp": "*",
     "rimraf": "*",
