--- a/bionic-js-java/pom.xml
+++ b/bionic-js-java/pom.xml
@@ -44,7 +44,7 @@
                 <dependency>
                     <groupId>srl.forge</groupId>
                     <artifactId>jjbridge-engine-v8</artifactId>
-                    <version>0.1.0</version>
+                    <version>0.1.2</version>
                     <classifier>windows</classifier>
                     <scope>test</scope>
                 </dependency>
@@ -61,7 +61,7 @@
                 <dependency>
                     <groupId>srl.forge</groupId>
                     <artifactId>jjbridge-engine-v8</artifactId>
-                    <version>0.1.0</version>
+                    <version>0.1.2</version>
                     <classifier>macos</classifier>
                     <scope>test</scope>
                 </dependency>
@@ -79,7 +79,7 @@
                 <dependency>
                     <groupId>srl.forge</groupId>
                     <artifactId>jjbridge-engine-v8</artifactId>
-                    <version>0.1.0</version>
+                    <version>0.1.2</version>
                     <classifier>linux</classifier>
                     <scope>test</scope>
                 </dependency>
@@ -106,6 +106,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M5</version>
+                <configuration>
+                    <runOrder>random</runOrder>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
