--- a/bionic-js-swift/.gitignore
+++ b/bionic-js-swift/.gitignore
@@ -3,3 +3,21 @@ node_modules
 
 # XCode
 xcuserdata
+/.idea/bionic-js-swift.iml
+
+# IntelliJ/AppCode
+**/.idea/**/workspace.xml
+**/.idea/**/tasks.xml
+**/.idea/**/usage.statistics.xml
+**/.idea/**/dictionaries
+**/.idea/**/shelf
+
+**/.idea/**/contentModel.xml
+
+**/.idea/**/dataSources/
+**/.idea/**/dataSources.ids
+**/.idea/**/dataSources.local.xml
+**/.idea/**/sqlDataSources.xml
+**/.idea/**/dynamic.xml
+**/.idea/**/uiDesigner.xml
+**/.idea/**/dbnavigator.xml
