--- a/bionic-js-tool/.gitignore
+++ b/bionic-js-tool/.gitignore
@@ -3,6 +3,20 @@ testing-code/host
 
 # IntelliJ
 **/.idea/workspace.xml
+**/.idea/**/tasks.xml
+**/.idea/**/usage.statistics.xml
+**/.idea/**/dictionaries
+**/.idea/**/shelf
+
+**/.idea/**/contentModel.xml
+
+**/.idea/**/dataSources/
+**/.idea/**/dataSources.ids
+**/.idea/**/dataSources.local.xml
+**/.idea/**/sqlDataSources.xml
+**/.idea/**/dynamic.xml
+**/.idea/**/uiDesigner.xml
+**/.idea/**/dbnavigator.xml
 
 # Node.js
 /node_modules
