--- a/bionic-js-java/pom.xml
+++ b/bionic-js-java/pom.xml
@@ -182,6 +182,11 @@
             <artifactId>jjbridge-api</artifactId>
             <version>0.1.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.9.12</version>
+        </dependency>
 
         <dependency>
             <groupId>com.github.spotbugs</groupId>
