--- a/bionic-js-tool/package.json
+++ b/bionic-js-tool/package.json
@@ -34,6 +34,7 @@
     "fast-glob": "^3.2.4",
     "ignore": "^5.1.8",
     "memfs": "^3.2.0",
+    "graceful-fs": "^4.2.4",
     "mkdirp": "^1.0.4",
     "rimraf": "^3.0.2",
     "touch": "^3.1.0",
