--- a/.github/workflows/build_java.yml
+++ b/.github/workflows/build_java.yml
@@ -7,6 +7,9 @@ on:
     branches:
       - 'main'
 
+  # Allows to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
 jobs:
   build_and_test:
     runs-on: ubuntu-latest
