--- a/.github/workflows/build_tool.yml
+++ b/.github/workflows/build_tool.yml
@@ -12,9 +12,13 @@ on:
 
 jobs:
   build_and_test:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
       - name: Cache NPM packages
         uses: actions/cache@v2
         with:
