--- a/.github/workflows/build_swift.yml
+++ b/.github/workflows/build_swift.yml
@@ -1,11 +1,11 @@
 name: Build Bionic.js Swift
 
 on:
-  #push:
-  #  paths:
-  #    - 'bionic-js-swift/**'
-  #  branches:
-  #    - 'main'
+  push:
+    paths:
+      - 'bionic-js-swift/**'
+    branches:
+      - 'main'
 
   # Allows to run this workflow manually from the Actions tab
   workflow_dispatch:
