--- a/bionic-js-tool/package.json
+++ b/bionic-js-tool/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bionicjs",
   "version": "1.0.1",
-  "description": "Bionic.js let you share the business logic between different native languages without using any framework and without writing a single line of bridging code.",
+  "description": "bionic.js let you use JavaScript classes from other programming languages without using any framework and without writing a single line of bridging code.",
   "homepage": "https://github.com/Forge-Srl/bionic-js",
   "license": "MIT",
   "author": "Forge S.r.l.",
