--- a/bionic-js-tool/package.json
+++ b/bionic-js-tool/package.json
@@ -17,6 +17,7 @@
     "bionicjs": "cli/cli.js"
   },
   "scripts": {
+    "lint": "./node_modules/.bin/eslint .",
     "test": "jest",
     "compile-parser": "node node_modules/pegjs/bin/pegjs --allowed-start-rules \"TagLine, Tags, BionicTag, DescriptionTag\" -o parser/annotation/Parser.js parser/annotation/pegjsSrc/Parser.pegjs"
   },
@@ -49,6 +50,7 @@
   },
   "devDependencies": {
     "copy-dir": "^1.3.0",
+    "eslint": "^7.20.0",
     "jest-cli": "^26.6.3",
     "pegjs": "^0.10.0"
   }
