--- a/bionic-js-tool/package.json
+++ b/bionic-js-tool/package.json
@@ -2,7 +2,15 @@
   "name": "bionicjs",
   "version": "0.0.0",
   "description": "bionic.js let you use JavaScript classes from other programming languages without using any framework and without writing a single line of bridging code.",
-  "keywords": ["code generation", "java", "android", "swift", "ios", "multiplatform", "bundle"],
+  "keywords": [
+    "code generation",
+    "java",
+    "android",
+    "swift",
+    "ios",
+    "multiplatform",
+    "bundle"
+  ],
   "homepage": "https://github.com/Forge-Srl/bionic-js",
   "license": "MIT",
   "author": "Forge S.r.l.",
