--- a/bionic-js-tool/package.json
+++ b/bionic-js-tool/package.json
@@ -32,7 +32,8 @@
     "compile-parser": "node node_modules/pegjs/bin/pegjs --allowed-start-rules \"TagLine, Tags, BionicTag, DescriptionTag\" -o parser/annotation/Parser.js parser/annotation/pegjsSrc/Parser.pegjs",
     "lint": "./node_modules/.bin/eslint .",
     "test": "jest",
-    "release": "np --no-yarn --no-publish --no-release-draft"
+    "prerelease": "npm test && npm run lint",
+    "release": "echo Please add a tag release/$npm_package_version to current commit and push it"
   },
   "jest-comment": "the transform:{} config is to disable transpillation and avoid problems while debugging async code",
   "jest": {
@@ -68,7 +69,6 @@
     "copy-dir": "^1.3.0",
     "eslint": "^7.20.0",
     "jest-cli": "^26.6.3",
-    "pegjs": "^0.10.0",
-    "np": "^7.4.0"
+    "pegjs": "^0.10.0"
   }
 }
