--- a/.github/workflows/release_tool.yml
+++ b/.github/workflows/release_tool.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
+        with:
+          registry-url: 'https://registry.npmjs.org'
       - name: Cache NPM packages
         uses: actions/cache@v2
         with:
