--- a/bionic-js-tool/package.json
+++ b/bionic-js-tool/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bionicjs",
+  "name": "@forge-srl/bionicjs",
   "version": "0.0.0",
   "description": "bionic.js let you use JavaScript classes from other programming languages without using any framework and without writing a single line of bridging code.",
   "keywords": [
