--- a/bionic-js-tool/package.json
+++ b/bionic-js-tool/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@forge-srl/bionicjs",
+  "name": "bionic-js-tool",
   "version": "0.0.0",
   "description": "bionic.js let you use JavaScript classes from other programming languages without using any framework and without writing a single line of bridging code.",
   "keywords": [
@@ -50,7 +50,9 @@
     "/generation",
     "/parser",
     "/schema",
-    "/Bjs.js"
+    "/Bjs.js",
+    "/README.md",
+    "/LICENSE.md"
   ],
   "dependencies": {
     "@babel/parser": "^7.12.7",
