--- a/bionic-js-tool/package.json
+++ b/bionic-js-tool/package.json
@@ -60,6 +60,8 @@
   "dependencies": {
     "@babel/parser": "^7.12.7",
     "commander": "^6.2.1",
+    "enquirer": "^2.3.6",
+    "ansi-colors": "^4.1.1",
     "fast-glob": "^3.2.4",
     "graceful-fs": "^4.2.4",
     "ignore": "^5.1.8",
